tests/toy/neg/001086_mutation.toylang
program a = { if a then sleep var else sleep; } .
